Simplify num_users filter and add similar lifetime filter

--- a/partials/warehouse/template-card.html
+++ b/partials/warehouse/template-card.html
@@ -13,7 +13,7 @@
         <span class="num_users"></span>
       </li>
       <li>
-        <i class="template-stats-icon fa-solid fa-clock" title="Lifetime"></i>
+        <i class="template-stats-icon fa-solid fa-clock" title="Maximum recommended lifetime"></i>
         <span class="lifetime"></span>
       </li>
       <li>
