--- a/partials/warehouse/template-page.html
+++ b/partials/warehouse/template-page.html
@@ -22,14 +22,14 @@
         <li>
           <i class="template-stats-icon fa-solid fa-users"></i>
           <div>
-            <strong>Number of users:</strong>
+            <strong>Max number of users:</strong>
             <span class="num_users"></span>
           </div>
         </li>
         <li>
           <i class="template-stats-icon fa-solid fa-clock"></i>
           <div>
-            <strong>Lifetime:</strong>
+            <strong>Max recommended lifetime:</strong>
             <span class="lifetime"></span>
           </div>
         </li>
