Add functionality to clear filter buttons

--- a/partials/warehouse/filter-dropdown.html
+++ b/partials/warehouse/filter-dropdown.html
@@ -8,7 +8,7 @@
     <div class="connector"></div>
     <div class="dropdown">
       <div class="dropdown-options"></div>
-      <a class="button">CLEAR FILTERS</a>
+      <a class="button" onclick="clearFilters(this)">CLEAR FILTERS</a>
     </div>
   </div>
 </div>
