--- a/docs/stylesheets/_warehouse.css
+++ b/docs/stylesheets/_warehouse.css
@@ -111,6 +111,7 @@
     align-self: center;
     padding: 0.3rem 1rem !important;
     white-space: nowrap;
+    cursor: pointer;
 }
 
 #warehouse {
