--- a/docs/stylesheets/_warehouse.css
+++ b/docs/stylesheets/_warehouse.css
@@ -123,6 +123,12 @@
     padding: 1.3rem;
 }
 
+#no-templates-message {
+    display: none;
+    text-align: center;
+    margin-top: 4rem;
+}
+
 .template-card {
     display: grid;
     grid-template:
