Swap clear filters button and applied filters

--- a/docs/stylesheets/_warehouse.css
+++ b/docs/stylesheets/_warehouse.css
@@ -128,7 +128,7 @@
 .current-filter {
     display: flex;
     align-items: center;
-    margin-left: 1rem;
+    margin-right: 1rem;
 }
 
 .current-filter .filter-name {
