--- a/partials/warehouse/current-filter.html
+++ b/partials/warehouse/current-filter.html
@@ -1,6 +1,6 @@
 <div id="blank-current-filter" class="current-filter">
   <span class="filter-name"></span>
-  <a>
+  <a onclick="clearSingleFilter(this)">
     <i class="template-stats-icon fa-solid fa-xmark"></i>
   </a>
 </div>
