Fix muscly arms styling

--- a/docs/stylesheets/_warehouse.css
+++ b/docs/stylesheets/_warehouse.css
@@ -102,10 +102,6 @@
     margin-right: 0.3rem;
 }
 
-.dropdown-option .muscly-arm {
-    margin-right: 0.2rem;
-}
-
 .dropdown .button {
     margin-top: 0.4rem;
     align-self: center;
@@ -140,6 +136,12 @@
     position: relative;
     top: 1px;
     z-index: -1;
+}
+
+.current-filter .muscly-arm {
+    max-height: 0.7rem;
+    margin-bottom: 0;
+    margin-right: 0.1rem;
 }
 
 #blank-current-filter {
@@ -264,8 +266,8 @@
 
 .muscly-arm {
     max-height: 0.9rem;
-    filter: brightness(1.8) saturate(0.2);
-    margin: 0.27rem 0.3rem 0.27rem 0;
+    filter: brightness(2.3);
+    margin: 0.27rem 0.27rem 0.27rem 0;
 }
 
 .capability-label {
