--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -14,6 +14,7 @@ html {
   background-color: var(--alces-blue);
   border-radius: 2px;
   padding: 0.5rem 1rem;
+  text-align: center;
   color: white !important;
   width: fit-content;
   transition: none !important;
