--- a/docs/stylesheets/_warehouse.css
+++ b/docs/stylesheets/_warehouse.css
@@ -32,12 +32,15 @@
 #filter-bar {
     background-color: var(--sky-blue-grey);
     display: flex;
+    align-items: center;
+    gap: 0.5rem;
     padding-inline: 2.5rem;
     font-weight: 300;
 }
 
 #filter-dropdowns-container {
     display: flex;
+    gap: 0.5rem;
 }
 
 #narrow-screen-filter-title-container {
@@ -66,7 +69,7 @@
     display: flex;
     align-items: center;
     height: 1.8rem;
-    margin: 0.3rem 0.5rem 0.3rem 0;
+    margin: 0.3rem 0;
     background-color: white;
     padding-left: 0.5rem;
     cursor: pointer;
@@ -91,7 +94,7 @@
     background-color: white;
     top: 2.1rem;
     left: -1px;
-    width: calc(100% - 0.5rem + 2px);
+    width: calc(100% + 2px);
     height: calc(0.9rem + 1px);
     z-index: 3;
     border-inline: solid var(--sky-blue-grey) 1px;
@@ -103,7 +106,7 @@
     top: 3rem;
     display: flex;
     flex-direction: column;
-    min-width: calc(100% - 0.5rem + 2px);
+    min-width: calc(100% + 2px);
     padding: 0.5rem;
     background-color: white;
     border: solid var(--sky-blue-grey) 1px;
@@ -131,7 +134,13 @@
 }
 
 #sort-container {
+    display: flex;
+    align-items: center;
     width: 13rem;
+}
+
+.sort-label {
+    margin-inline-start: auto;
 }
 
 #sort-container .filter {
@@ -201,12 +210,6 @@
 
 #narrow-screen-filter-button, #narrow-screen-button-container {
     display: none;
-}
-
-#sort-container {
-    display: flex;
-    align-items: center;
-    margin-left: auto;
 }
 
 #no-templates-message {
@@ -404,7 +407,7 @@
     .filter {
         width: 100%;
         height: 2.3rem;
-        margin-right: 0;
+        margin: 0;
     }
 
     .filter .template-stats-icon {
