Disable scrolling while filters are open on narrow screens

--- a/docs/stylesheets/_warehouse.css
+++ b/docs/stylesheets/_warehouse.css
@@ -470,6 +470,11 @@
         width: 100%;
     }
 
+    .disable-scrolling{
+        height: 100%;
+        overflow: hidden;
+    }
+
     #sort-container {
         display: block;
     }
